<resources>
    <string name="app_name">TubesPBP_MehTravelling</string>
    <string name="username">Masukkan Username</string>
    <string name="password">Masukkan password</string>
    <string name="register">New User? Register Now</string>
    <string name="nama_destinasi">MALIOBORO</string>
    <string name="alamat_destinasi">Jalan Yogyakarta</string>
    <string name="deskripsi_destinasi">Malioboro merupakan tempat wisata</string>
    <string name="list_destinasi">LIST DESTINASI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="namaInputan">Nama Destinasi</string>
    <string name="tanggalInputan">Tanggal Pemesanan</string>
    <string name="lamaInputan">Lama Pesanan</string>
    <string name="tipeInputan">Tipe Pesanan</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFyc2hhbmRhYWsiLCJhIjoiY2t1bTZndTQxMjVzcDJvcGhvc3AwaWhibiJ9.5DbKD7Mb4GitmGHMG745Sw</string>
    <string name="user_location_permission_explanation"> Apakah diperbolehkan?</string>
    <string name="user_location_permission_not_granted">Ditolah Kalian Semua</string>
    <!--Default style names-->

    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="tambah_survey">Tambah Survey</string>
    <string name="nama_destinasi_edit">Nama Destinasi</string>
    <string name="alasan">Alasan</string>
    <string name="penilaian">Penilaian</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="edit_survey">Edit Survey</string>

    <string name="user_profile">User Profile</string>
    <string name="nama">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="cancel">Cancel</string>
    <string name="_sign_up">| Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="questionSignUp">Don\'t have an account?</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>

    <string name="close">close</string>
    <string name="lokasi">LOKASI</string>
    <string name="about_us">ABOUT US</string>
    <string name="riwayat_pemesanan">RIWAYAT PEMESANAN</string>
    <string name="pesan">PESAN</string>
<!--    <string name="list_destinasi">LIST DESTINASI</string>-->
    <string name="welcome_marshanda">Welcome, MARSHANDA</string>
    <string name="survey_destinasi">SURVEY DESTINASI</string>
    <string name="profile">PROFILE</string>
    <string name="destinasi_name">Nama Destinasi</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string-array name="penilaian">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>