<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/list_destinasi_1"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/malioboro3" />

        <TextView
            android:id="@+id/tv_namadestinasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nama_destinasi"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_alamatdestinasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/alamat_destinasi"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_deskripsidestinasi"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="85dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="200dp"
            android:text="@string/deskripsi_destinasi"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
</LinearLayout>