<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_1"
    android:orientation="vertical"
    android:padding="40dp"
    android:id="@+id/mainLayout">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_below="@id/txtusername"
        android:drawablePadding="12dp"
        android:layout_marginTop="15dp"
        android:paddingStart="12dp"
        android:background="@drawable/custom_input"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtpassword"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="Clear Field"
            android:backgroundTint="#E41D1D" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LOGIN"
            android:layout_marginStart="16dp"
            android:backgroundTint="#04368E" />

    </LinearLayout>
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/purple_700"
        android:onClick="register"
        tools:ignore="OnClick" />
</LinearLayout>